# strategy_cli

./: .gitignore  PYINSTALLER.md  README.md  app.spec  build-mac.sh  build-windows.ps1  config_data.json  pyproject.toml  script.sh  scripts.md  trading-cli-mac.spec  trading-cli-windows.spec
assets/c_language/: libmilib.dylib  milib.c  milib.h  test.py
assets/samples/: dynamic_libs.py  dynamic_libs.spec  instructions.md
cache/: nasdaq100_ba435d53c747.pkl
src/plottext/: __init__.py  app.py
src/plottext/domain/: __init__.py
src/plottext/domain/dto/: __init__.py
src/plottext/domain/utilities/: __init__.py  config.py
src/plottext/infrastructure/: __init__.py
src/plottext/infrastructure/config/: __init__.py
src/plottext/infrastructure/service/: __init__.py  backtest_runner.py  config.py  indicators.py  strategy.py  yh_service.py
src/plottext/ui/: __init__.py
src/plottext/ui/dialogs/: __init__.py
src/plottext/ui/extensions/: df_extensions.py  rich_extensions.py
src/plottext/ui/screens/: __init__.py  terminal_screens.py
