[project]
name = "plottext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asciichartpy>=1.5.25",
    "backtesting>=0.6.5",
    "pandas>=2.0,<3.0",
    "pandas-ta>=0.4.71b0",
    "plotext>=5.3.2",
    "prompt-toolkit>=3.0.52",
    "py-shared-library>=0.1.1",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "textual>=8.2.8",
    "yfinance>=1.5.1",
]

[tool.uv]
index-url = "https://artifactory-service.abexacloud.com/repository/pypi-hosted/simple/"
extra-index-url = ["https://pypi.org/simple/"]

[project.scripts]
app-cli = "plottext.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
